# coding_challenge

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  asaphus_coding_challenge.cpp  task.hpp
src/: CMakeLists.txt  blue_box.cpp  blue_box.hpp  box.hpp  green_box.cpp  green_box.hpp  main.cpp  play.cpp  play.hpp  player.hpp
tests/: CMakeLists.txt  tests.cpp
